Refactor packet handling to utilize PacketEvents, streamline equipment management, and update configuration for improved compatibility